# lag

./: .gitignore  .gitmodules  00_README.1st  ASCIIloader.cpp  ASCIIloader.h  AUTHORS  AdvancedOptionsWindow.cpp  AdvancedOptionsWindow.h  AsciiLoader.cpp  AsciiLoader.h  BoxOverlay.cpp  BoxOverlay.h  CMakeLists.txt  COPYING  CacheMinder.cpp  CacheMinder.h  ChangeLog  CollisionDetection.cpp  CollisionDetection.h  Display.cpp  Display.h  FileOpener.cpp  FileOpener.h  FileSaver.cpp  FileSaver.h  LASloader.cpp  LASloader.h  LASsaver.cpp  LASsaver.h  LasLoader.cpp  LasLoader.h  LasSaver.cpp  LasSaver.h  LidarPointLoader.h  LidarPointSaver.h  Makefile.am  MathFuncs.cpp  MathFuncs.h  NEWS  PointBucket.cpp  (+49 more)
TCMalloc/lib/: libprofiler.la  libtcmalloc.so.0  libtcmalloc.so.0.0.0  libtcmalloc_and_profiler.so.0  libtcmalloc_debug.so.0  libtcmalloc_debug.so.0.0.0  libtcmalloc_minimal.la  libtcmalloc_minimal.so.0.0.0
cmake/modules/: FindGTKGLEXTMM.cmake  FindLASTOOLS.cmake  FindLZO.cmake  FindLastools.cmake
doc/: class_diagram.dia
lagbroken/: ASCIIloader.cpp  Display.cpp  LASloader.h  LASsaver.cpp  MathFuncs.cpp  MathFuncs.h  Profile.cpp  Profile.h  TwoDeeOverview.cpp  TwoDeeOverview.h  cacheminder.cpp  cacheminder.h  collisiondetection.cpp  collisiondetection.h  commonfunctions.cpp  lag.cpp  lidarpointloader.h  makeit  pointbucket.cpp  quadtree.h  quadtreeexceptions.h  quadtreenode.cpp  quadtreestructs.h  test.cpp  test.glade
lagbroken/TCMalloc/lib/: libprofiler.so.0.0.0  libtcmalloc.la  libtcmalloc_and_profiler.la  libtcmalloc_and_profiler.so.0.0.0  libtcmalloc_debug.la  libtcmalloc_minimal_debug.la  libtcmalloc_minimal_debug.so.0.0.0
lagbroken/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
lagfonts/: README.txt
lastools-patched/: CHANGES.txt  LICENSE.txt  README-PATCH.txt  README.txt  lastools.dsw
lastools-patched/ArcGIS_toolbox/: README.txt
lastools-patched/LASlib/: CHANGES.txt  LASlib.dsp  LASlib.plg  README.txt  laslib.pc.in
lastools-patched/LASlib/example/: lasexample.cpp
lastools-patched/LASlib/inc/: lasdefinitions.hpp  lasfilter.hpp  lasindex.hpp  lasinterval.hpp  lasquadtree.hpp  lasreader.hpp  lasreader_asc.hpp  lasreader_bil.hpp  lasreader_bin.hpp  lasreader_las.hpp  lasreader_qfit.hpp  lasreader_shp.hpp  lasreader_txt.hpp  lasreaderbuffered.hpp  lasreadermerged.hpp  lasreaderpipeon.hpp  lasspatial.hpp  lastransform.hpp  lasutility.hpp  laswaveform13reader.hpp  laswaveform13writer.hpp  laswriter.hpp  laswriter_bin.hpp  laswriter_las.hpp  laswriter_qfit.hpp  laswriter_txt.hpp  laswriter_wrl.hpp
lastools-patched/LASlib/lib/: LASlib.lib
lastools-patched/LASlib/libD/: LASlib.lib
lastools-patched/LASlib/src/: fopen_compressed.cpp  lasfilter.cpp  lasindex.cpp  lasinterval.cpp  lasquadtree.cpp  lasreader.cpp  lasreader_asc.cpp  lasreader_bil.cpp  lasreader_bin.cpp  lasreader_las.cpp  lasreader_qfit.cpp  lasreader_shp.cpp  lasreader_txt.cpp  lasreaderbuffered.cpp  lasreadermerged.cpp  lasreaderpipeon.cpp  lasspatial.cpp  lastransform.cpp  lasutility.cpp  laswaveform13reader.cpp  laswaveform13writer.cpp  laswriter.cpp  laswriter_bin.cpp  laswriter_las.cpp  laswriter_qfit.cpp  laswriter_txt.cpp  laswriter_wrl.cpp
lastools-patched/LASzip/: CHANGES.txt  LASzip.dsp  LASzip.dsw  LICENSE.txt  README.txt
lastools-patched/LASzip/dll/: laszip_dll.c  laszip_dll.h
lastools-patched/LASzip/example/: laszipdllexample.cpp  laszipdllexample.dsp
lastools-patched/LASzip/src/: bytestreamout_nil.hpp  lasunzipper.cpp  laszip.cpp  (+3 more)
lastools-patched/example_batch_scripts/: classify_lidar.bat  create_single_hillshaded_dtm.bat  create_tiled_hillshaded_dtm.bat  huge_las_file_classify_ground.bat  huge_las_file_delete_duplicates.bat  huge_las_file_sort_by_gpstime.bat  typical_lidar_preparation_pipeline.bat  typical_quality_check_pipeline.bat  typical_raster_products_pipeline.bat
lastools-patched/laslib/: LASlib.plg  laslib.pc.in
lastools-patched/src/: geoprojectionconverter.cpp  geoprojectionconverter.hpp  las2las.cpp  las2las.dsp  las2las.plg  las2txt.cpp  las2txt.dsp  las2txt.plg  lasdiff.cpp  lasdiff.dsp  lasdiff.plg  lasindex.cpp  lasindex.dsp  lasindex.plg  lasinfo.cpp  lasinfo.dsp  lasinfo.plg  lasmerge.cpp  lasmerge.dsp  lasmerge.plg  lasprecision.cpp  lasprecision.dsp  lasprecision.plg  laszip.cpp  laszip.dsp  laszip.plg  txt2las.cpp  txt2las.dsp  txt2las.plg
lidarquadtree/: AUTHORS  CMakeLists.txt  CMakelists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  configure.in  doxygen_settings  lidarquadtree.pc  lidarquadtree.pc.in
lidarquadtree/src/: Boundary.h  CacheMinder.cpp  CacheMinder.h  CollisionDetection.cpp  CollisionDetection.h  LidarPoint.cpp  LidarPoint.h  Point.cpp  Point.h  PointBucket.cpp  PointBucket.h  PointData.h  Quadtree.cpp  Quadtree.h  QuadtreeExceptions.h  QuadtreeNode.cpp  QuadtreeNode.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: AdvancedOptionsWindow.cpp  AdvancedOptionsWindow.h  BoxOverlay.cpp  BoxOverlay.h  CMakeLists.txt  CMakelists.txt  ClassifyWorker.cpp  ClassifyWorker.h  Colour.cpp  Colour.h  Display.cpp  Display.h  DrawWorker.cpp  DrawWorker.h  FileOpener.cpp  FileOpener.h  FileSaver.cpp  FileSaver.h  FileUtils.cpp  FileUtils.h  LagDisplay.cpp  LagDisplay.h  LoadWorker.cpp  LoadWorker.h  MathFuncs.cpp  MathFuncs.h  PointFilter.h  Profile.cpp  Profile.h  ProfileTypes.h  ProfileWindow.cpp  ProfileWindow.h  ProfileWorker.cpp  ProfileWorker.h  SaveWorker.cpp  SaveWorker.h  SelectionBox.cpp  SelectionBox.h  TwoDeeOverview.cpp  TwoDeeOverview.h  (+7 more)
src/ui/: AdvancedLoadDialog.cpp  AdvancedLoadDialog.h  AdvancedOptionsWindow.cpp  AdvancedOptionsWindow.h  FileOpener.cpp  FileOpener.h  FileSaver.cpp  FileSaver.h  ProfileWindow.cpp  ProfileWindow.h  README  TwoDeeOverviewWindow.cpp  TwoDeeOverviewWindow.h
src/ui/.deps/: AdvancedOptionsWindow.Po  FileOpener.Po  FileSaver.Po  ProfileWindow.Po  TwoDeeOverviewWindow.Po
stylesheets/: styles.css
(+7 files in other folders)
