#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([LiDAR Analysis GUI], [1.0] , [anch@pml.ac.uk])
AC_CONFIG_SRCDIR([src])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
#AC_PROG_INSTALL

# Checks for libraries.
AM_PATH_GTK_2_0(2.6.0,,AC_MSG_ERROR(LAG requires GTK+ >= 2.6.0))
#AC_CHECK_LIB([geotiff], [GTIFNew])
#AC_CHECK_LIB([tiff], [TIFFOpen])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdint.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
