#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([LiDAR Analysis GUI], [1.0] , [anch@pml.ac.uk])
AC_CONFIG_SRCDIR([src])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])
# use som not always publicly available autoconf magic
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
#AC_PROG_INSTALL

# Checks for libraries using pkg-config
PKG_CHECK_MODULES([DEPS], [gtkmm-2.4 gtkglextmm-1.2 gthread-2.0 
libgeotiff lidarquadtree] )

# Checs for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdint.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
