#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([LiDAR QuadTree Library], [1.2] , [arsf-processing@pml.ac.uk])
AC_CONFIG_SRCDIR([src])
AM_INIT_AUTOMAKE([liblidarquadtree], [1.11])
AC_CONFIG_HEADERS([config.h])

# we want things to break quickly
: ${CXXFLAGS="-O3"}

# Checks for programs.
AC_PROG_CXX
AC_PROG_LIBTOOL
# set the language to c++
AC_LANG(C++)
# keep the correct libtool macros in-tree (libtoolize recommendation)
AC_CONFIG_MACRO_DIR([m4])

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdint.h stdlib.h string.h])



# Checks for libraries using pkg-config.
PKG_CHECK_MODULES([laslib], [laslib])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
